--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-marquee-slider": "^1.1.5",
     "react-scroll": "^1.9.3",
     "sass": "^1.88.0"
   },
